--- a/Vozila/Pages/VozilaLista/UnosUspjesan.cshtml
+++ b/Vozila/Pages/VozilaLista/UnosUspjesan.cshtml
@@ -5,4 +5,4 @@
 }
 
 <h3>Podaci uspješno unešeni.</h3>
-<a asp-page="Index" class="btn btn-info">Povratak na listu</a>
+<a asp-page="Index" class="btn btn-info">Povratak na listu vozila</a>
