--- a/Vozila/Pages/Index.cshtml
+++ b/Vozila/Pages/Index.cshtml
@@ -5,5 +5,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Lista vozila, projekt za PIN</h1>
+    <h3 class="display-3">Programiranje na internetu</h3>
+    <br /><br />
+    <h1 class="display-4">Lista vozila</h1>
+
 </div>
