--- a/Vozila/Pages/VozilaLista/Izmjeni.cshtml
+++ b/Vozila/Pages/VozilaLista/Izmjeni.cshtml
@@ -1,19 +1,18 @@
 ﻿@page
-@model Vozila.Pages.VozilaLista.UnosModel
-@{
-    ViewData["Title"] = "Unos vozila";
-}
+@model Vozila.Pages.VozilaLista.IzmjeniModel
 
-<h2 class="text-info">Unos novog vozila</h2>
+<h2 class="text-info">Izmjeni vozilo</h2>
 
 <div class="container border padding-custom">
     <form method="post">
+
+        <input type="hidden" asp-for="Vozilo.Id" />
         <div class="text-danger" asp-validation-summary="ModelOnly"></div>
         <div class="form-group row">
             <div class="col-4">
                 <label asp-for="Vozilo.Marka"></label>
             </div>
-            <div class="col-4">
+            <div class="col-6">
                 <input asp-for="Vozilo.Marka" class="form-control" />
             </div>
             <span asp-validation-for="Vozilo.Marka" class="text-danger"></span>
@@ -22,14 +21,14 @@
             <div class="col-4">
                 <label asp-for="Vozilo.Model"></label>
             </div>
-            <div class="col-4">
+            <div class="col-6">
                 <input asp-for="Vozilo.Model" class="form-control" />
             </div>
         </div><div class="form-group row">
             <div class="col-4">
                 <label asp-for="Vozilo.Tip"></label>
             </div>
-            <div class="col-4">
+            <div class="col-6">
                 <input asp-for="Vozilo.Tip" class="form-control" />
             </div>
         </div>
@@ -37,21 +36,23 @@
             <div class="col-4">
                 <label asp-for="Vozilo.Sasija"></label>
             </div>
-            <div class="col-4">
+            <div class="col-6">
                 <input asp-for="Vozilo.Sasija" class="form-control" />
             </div>
         </div>
         <div class="form-group row">
-            <div class="col-2 offset-4">
-                <input type="submit" value="Unesi" class="btn btn-primary form-control" />
+            <div class="col-3 offset-4">
+                <input type="submit" value="Spremi" class="btn btn-primary form-control" />
             </div>
-            <div class="col-2">
+            <div class="col-3">
                 <a asp-page="Index" class="btn btn-success form-control">Natrag</a>
             </div>
         </div>
     </form>
 </div>
-@section scripts{ 
-<partial name="_ValidationScriptsPartial" />
+@section scripts{
+    <partial name="_ValidationScriptsPartial" />
 
 }
+
+
